Fixing alignment of reset button

--- a/modules/st2-panel/style.css
+++ b/modules/st2-panel/style.css
@@ -757,6 +757,7 @@
       display: table;
 
       border-spacing: 10px 0;
+      width: 100%;
     }
   }
 
